--- a/css/styles.css
+++ b/css/styles.css
@@ -2,21 +2,24 @@
    Public API Request
 ======================================== */
 
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web&display=swap');
+
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     width: 100%;
     max-width: 100%;
 }
 
 body {
-    font-family: "Nunito", sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     text-align: center;
-    background: rgba(235, 235, 235, 0.9);
+    background: rgba(0, 50, 73, 0.9);
 }
 
 header {
@@ -29,37 +32,51 @@ header {
 }
 
 header h1 {
-    font-size: 1.25em;
-    color: rgba(50, 50, 50, 0.9);
+    font-weight: bolder;
+    font-size: 1.5em;
+    color: rgba(239, 118, 129, 0.9);
+    text-shadow: 2px 2.5px 0px #000;
     margin-top: 35px;
 }
 
 .search-input {
+    background: rgba(224, 221, 207, 0.98);
     padding: 0.4rem 1rem;
     border: 1px solid rgba(200, 200, 200, 0.9);
-    border-radius: 0.25rem 0 0 0.25rem ;
+    border-radius: 0.25rem 0 0 0.25rem;
     max-width: 20rem;
     transition: .4s ease-out;
     outline: none;
 }
 
-.search-input:active, .search-input:hover, .search-input:focus {
+.search-input:active,
+.search-input:hover,
+.search-input:focus {
+    background: rgba(243, 244, 227, 0.9);
     border: 1px solid rgba(50, 50, 50, 0.9);
+    box-shadow: 0 20px 50px rgba(243, 244, 227, 0.7);
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 .search-submit {
     cursor: pointer;
     height: 33px;
-    background: rgba(245, 245, 245, 0.9);
+    background: rgba(224, 221, 207, 0.98);
     border-radius: 0 0.25rem 0.25rem 0;
     border: 1px solid rgba(200, 200, 200, 0.9);
     transition: .4s ease-out;
     outline: none;
 }
 
-.search-submit:active, .search-submit:hover, .search-submit:focus {
-    background: rgba(255, 255, 255, 0.9);
+.search-submit:active,
+.search-submit:hover,
+.search-submit:focus {
+    background: rgba(243, 244, 227, 0.9);
     border: 1px solid rgba(50, 50, 50, 0.9);
+    box-shadow: 0 20px 50px rgba(243, 244, 227, 0.7);
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 
@@ -76,7 +93,7 @@ header h1 {
     max-width: 1200px;
     margin: auto;
 }
-  
+
 .card {
     display: flex;
     flex-direction: row;
@@ -87,11 +104,18 @@ header h1 {
     max-width: 360px;
     margin: 10px 10px 20px;
     padding: 10px;
-    background: rgba(245, 245, 245, 0.9);
+    background: rgba(224, 221, 207, 0.98);
     border-radius: 0.25em;
     border: 1px solid rgba(50, 50, 50, 0.3);
     transition: .4s ease-out;
     overflow: hidden;
+}
+
+.card:hover {
+    background-color: #F8F4E3;
+    box-shadow: 0 20px 50px rgba(243, 244, 227, 0.7);
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 .card-img {
@@ -100,20 +124,31 @@ header h1 {
     border-radius: 50%;
 }
 
+.card-img:hover {
+    border-radius: 10%;
+    transform: scale(1.2);
+    transition: all 0.3s ease-in-out 0s;
+}
+
 .card-info-container {
     text-align: left;
 }
+
 
 .card-name {
     margin: 20px auto 0;
 }
 
+
+
 .card-text {
     font-size: 0.9em;
     color: rgba(50, 50, 50, 0.7);
     margin: 7px auto;
-    transition: .4s ease-out;
+    transition: all 0.3s ease-in-out 0s;
 }
+
+
 
 .cap {
     text-transform: capitalize;
@@ -140,7 +175,7 @@ header h1 {
     min-height: 415px;
     margin: 10px auto auto;
     padding-bottom: 15px;
-    background: rgba(255, 255, 255, 1);
+    background: rgba(224, 221, 207, 1);
     border-radius: 0.25em;
     border: 1px solid rgba(100, 100, 100, 0.3);
     transition: .4s ease-out;
@@ -158,10 +193,21 @@ header h1 {
     border: 1px solid rgba(50, 50, 50, 0.3);
 }
 
+.modal-close-btn:hover {
+    transform: scale(1.5);
+    transition: all 0.3s ease-in-out 0s;
+}
+
 .modal-img {
     width: 150px;
     margin-top: 35px;
     border-radius: 50%;
+}
+
+.modal-img:hover {
+    border-radius: 10%;
+    transform: scale(1.2);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 .modal-name {
@@ -186,11 +232,16 @@ header h1 {
     justify-content: space-evenly;
     width: 95%;
     max-width: 420px;
-    padding: 10px 15px 15px;;
+    padding: 10px 15px 15px;
     margin: 10px auto auto;
-    background: rgba(255, 255, 255, 1);
+    background: rgba(248, 244, 227, 1);
     border-radius: 0.25em;
     border: 1px solid rgba(100, 100, 100, 0.3);
+}
+
+.modal-btn-container:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out 0s;
 }
 
 
@@ -205,8 +256,13 @@ header h1 {
     border-radius: 0.35em;
     transition: .4s ease-out;
     outline: none;
-  }
-  
+}
+
+.modal-btn-container .btn:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out 0s;
+}
+
 
 /* ===================================== 
    Media Queries
@@ -248,16 +304,16 @@ header h1 {
 @media (min-width: 1024px) {
 
     .card:hover {
-        background: rgba(255, 255, 255, 1);
+        background: rgba(243, 244, 227, 1);
         border: 1px solid rgba(50, 50, 50, 0.9);
     }
 
     .card:hover .card-text {
-        color: rgba(25, 25, 25, 1); 
+        color: rgba(25, 25, 25, 1);
     }
 
     .btn:hover {
-        background: rgba(255, 255, 255, 1);
-        color: rgba(25, 25, 25, 1); 
+        background: rgba(243, 255, 189, 1);
+        color: rgba(25, 25, 25, 1);
     }
 }
